Fix overscroll on iPhone

--- a/web/main/index.css
+++ b/web/main/index.css
@@ -6,7 +6,7 @@
 :root {
   --theme-color: var(--land-color);
 
-  -webkit-overflow-scrolling: auto;
+  overscroll-behavior-y: none;
   color-scheme: light dark;
 
   &.is-light-theme {
@@ -61,8 +61,6 @@ ol[role='list'] {
 
 #main {
   @mixin background var(--land-color);
-
-  -webkit-overflow-scrolling: touch;
 
   @media (width > 64rem) {
     padding-inline-start: var(--navbar-width);
